--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,29 +1,30 @@
-# Pulling Debian
-# 	Versions	https://www.debian.org/releases/
-#		12.4	Bookworm (Stable)
-#		11.8	Bullseye (Penultimate)
-#		10.13	Buster	(oldoldstable)
-FROM	debian:bullseye
+FROM inception:base
 
-LABEL	_author="Othello"\
-		_project="Inception"
-
-RUN		apt-get update
+# Installation
 RUN		apt-get install -y --fix-missing \
-						mariadb-server
-RUN		apt-get clean \
+			mariadb-server \
+			gettext-base \
+	&&	apt-get clean \
 	&&	rm -rf /var/lib/apt/lists/*
 
-COPY	tools/entrypoint.sh		/tools/
-COPY	tools/health_daemon.sh	/tools/
-RUN 	chmod +x	/tools/entrypoint.sh\
-					/tools/health_daemon.sh
+# Import
+COPY	conf/50-server.conf		/etc/mysql/mariadb.conf.d/50-server.cnf
 
-EXPOSE 3306
+COPY	conf/mariadb.conf		/etc/mysql/mariadb.cnf
+RUN		chmod 664	/etc/mysql/mariadb.cnf
 
+COPY	tools/mariadb_setup.sh	/usr/local/bin/mariadb_setup.sh
+COPY	tools/health_daemon.sh	/usr/local/bin/health_daemon.sh
+RUN		chmod +x	/usr/local/bin/mariadb_setup.sh \
+					/usr/local/bin/health_daemon.sh
+
+
+# Configuration
+EXPOSE	3306
 HEALTHCHECK	--interval=1m --timeout=10s --retries=3 \
-			CMD	/tools/health_daemon.sh
+			CMD ["/usr/local/bin/health_daemon.sh"]
 
-ENTRYPOINT	["/tools/entrypoint.sh"]
-CMD	["mysqld_safe"]
+# Bootup
+ENTRYPOINT	["/usr/local/bin/mariadb_setup.sh"]
+CMD	["mariadbd"]
 # CMD ["tail", "-f", "/dev/null"]
