--- a/srcs/requirements/mariadb/conf/50-server.conf
+++ b/srcs/requirements/mariadb/conf/50-server.conf
@@ -12,16 +12,16 @@
 # * Basic Settings
 #
 
-user                    = mysql
+user                    = root #mysql
 pid-file                = /run/mysqld/mysqld.pid
 basedir                 = /usr
 datadir                 = /var/lib/mysql
 tmpdir                  = /tmp
-port					= 3306 # added
-socket					= /run/mysql/mysqld.sock
 lc-messages-dir         = /usr/share/mysql
 lc-messages             = en_US
-skip-external-locking
+# skip-external-locking
+port					= 3306
+socket					= /run/mysqld/mysqld.sock
 
 # Broken reverse DNS slows down connections considerably and name resolve is
 # safe to skip if there are no "host by domain name" access grants
@@ -30,7 +30,7 @@ skip-external-locking
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
 # bind-address            = 127.0.0.1
-bind-address			= 0.0.0.0 # altered
+bind-address			= 0.0.0.0
 
 #
 # * Fine Tuning
@@ -60,7 +60,7 @@ bind-address			= 0.0.0.0 # altered
 # and when running legacy init error logging goes to syslog due to
 # /etc/mysql/conf.d/mariadb.conf.d/50-mysqld_safe.cnf
 # Enable this if you want to have error logging into a separate file
-#log_error = /var/log/mysql/error.log
+log_error = /var/log/mysql/error.log
 # Enable the slow query log to see queries with especially long duration
 #slow_query_log_file    = /var/log/mysql/mariadb-slow.log
 #long_query_time        = 10
