--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -21,9 +21,9 @@
 #
 [client-server]
 # Port or socket location where to connect
-port = 3306 #uncommented
+port = 3306
 socket = /run/mysqld/mysqld.sock
-# bind-address = 0.0.0.0 #added
+# bind-address            = 0.0.0.0
 
 # Import all .cnf files from configuration directory
 !includedir /etc/mysql/conf.d/
