--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     image: wordpress:inception
     depends_on:
       - inception_base
+      - mariadb
     build:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
