--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -23,8 +23,15 @@
 # Port or socket location where to connect
 port = 3306
 socket = /run/mysqld/mysqld.sock
-# bind-address            = 0.0.0.0
 
 # Import all .cnf files from configuration directory
 !includedir /etc/mysql/conf.d/
 !includedir /etc/mysql/mariadb.conf.d/
+
+#
+# Takes priority over 50-server.cnf
+# this is only for the mysqld standalone daemon
+[mysqld]
+user      = ${DB_ROOT_USER}
+log_error = /var/log/mysql/error.log
+bind-address = 0.0.0.0
