[EDIT] made nginx dependant on wordpress to remove warning

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     image: nginx:inception
     depends_on:
       - inception_base
+      - wordpress
     build:
       context: ./requirements/nginx
       dockerfile: Dockerfile
