[EDIT] commeted out a non-functional line

--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -32,6 +32,6 @@ socket = /run/mysqld/mysqld.sock
 # Takes priority over 50-server.cnf
 # this is only for the mysqld standalone daemon
 [mysqld]
-user      = ${DB_ROOT_USER}
+# user      = ${DB_ROOT_USER}
 log_error = /var/log/mysql/error.log
 bind-address = 0.0.0.0
